# golioth-firmware-sdk

./: .ci-west-ncs-twister.yml  .ci-west-ncs.yml  .ci-west-zephyr-twister.yml  .ci-west-zephyr.yml  .clang-format  .codecov.yml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  CI_ARTIFACT_README.md  CONTRIBUTING.md  README.md  west-ncs.yml  west-zephyr.yml
docs/: .firebaserc  Flash_and_RAM_Usage.md  Integration_Guide.md  (+4 more)
examples/esp_idf/certificate_auth/main/: CMakeLists.txt  app_main.c
examples/esp_idf/certificate_auth/main/certs/: README.md  ca.pem  client.key  client.pem
examples/esp_idf/cpp/main/: CMakeLists.txt  app_main.cpp
examples/esp_idf/fw_update/main/: CMakeLists.txt  Kconfig  app_main.c  fw_update.c  fw_update.h
examples/esp_idf/golioth_basics/main/: CMakeLists.txt  Kconfig  app_main.c
examples/esp_idf/hello/main/: CMakeLists.txt  app_main.c
examples/esp_idf/magtag_demo/main/: CMakeLists.txt  app_main.c  board.h  buttons.c  buttons.h  events.h  i2c.c  i2c.h  led_strip.h  led_strip_rmt_ws2812.c  leds.c  leds.h  light_sensor.c  light_sensor.h  lis3dh.c  lis3dh.h  speaker.c  speaker.h
examples/esp_idf/magtag_demo/main/audio/: coin.h
examples/esp_idf/magtag_demo/main/epaper/: EPD_2in9d.c  EPD_2in9d.h  ImageData.c  ImageData.h  epaper.c  epaper.h  epaper_priv.h  font5x8.h
examples/esp_idf/test/main/: CMakeLists.txt  app_main.c
examples/linux/golioth_basics/: CMakeLists.txt  build.sh  fw_update_linux.c  golioth_user_config.h  main.c
examples/zephyr/certificate_provisioning/: CMakeLists.txt  README.md  generate-lfs-image.py  prj.conf  sample.yaml
examples/zephyr/certificate_provisioning/boards/: esp32_devkitc_wrover.conf  frdm_rw612.overlay  native_sim.overlay  nrf52840dk_nrf52840.conf  nrf52840dk_nrf52840.overlay  nucleo_h563zi_stm32h563xx.overlay  rak5010_nrf52840.conf  rak5010_nrf52840.overlay  rpi_pico2_rp2350a_m33_w.conf  rpi_pico2_rp2350a_m33_w.overlay
examples/zephyr/certificate_provisioning/pytest/: conftest.py  test_sample.py
examples/zephyr/certificate_provisioning/socs/: esp32_procpu.overlay  native.overlay
examples/zephyr/certificate_provisioning/src/: main.c
examples/zephyr/certificate_rotation/: CMakeLists.txt  README.md  generate-lfs-image.py  prj.conf  sample.yaml
examples/zephyr/certificate_rotation/boards/: frdm_rw612.conf  nrf52840dk_nrf52840.conf  nrf9160dk_nrf9160_ns.overlay  nucleo_h563zi_stm32h563xx.conf  nucleo_h563zi_stm32h563xx.overlay  rak5010_nrf52840.conf
examples/zephyr/certificate_rotation/socs/: esp32s3_procpu.conf  esp32s3_procpu.overlay  native.conf  nrf9160_ns.conf
examples/zephyr/certificate_rotation/src/: main.c
examples/zephyr/logging/: CMakeLists.txt  Kconfig  README.md  prj.conf  sample.yaml
examples/zephyr/logging/boards/: native_sim.conf  nrf52840dk_nrf52840.conf  rak5010_nrf52840.conf
examples/zephyr/logging/pytest/: test_sample.py
examples/zephyr/logging/socs/: native_64.conf  nrf9160_ns.conf
examples/zephyr/logging/src/: main.c
port/esp_idf/components/coap/: CMakeLists.txt  Kconfig
port/esp_idf/components/golioth_sdk/: CMakeLists.txt  Kconfig
port/esp_idf/components/heatshrink/: CMakeLists.txt
port/esp_idf/components/zcbor/: CMakeLists.txt
port/linux/golioth_sdk/: CMakeLists.txt
src/: CMakeLists.txt  Kconfig  Kconfig.authentication  Kconfig.coap  Kconfig.logging  coap_blockwise.c  coap_blockwise.h  coap_client.c  coap_client.h  coap_client_libcoap.c  coap_client_libcoap.h  coap_client_zephyr.c  coap_client_zephyr.h  event_group.c  event_group.h  fw_block_processor.c  fw_block_processor.h  fw_update.c  gateway.c  golioth.c  golioth_coap_client.c  golioth_debug.c  golioth_decompressor.c  golioth_event_group.c  golioth_fw_block_processor.c  golioth_fw_update.c  golioth_lightdb.c  golioth_lightdb_state.c  golioth_lightdb_stream.c  golioth_log.c  golioth_mbox.c  golioth_ota.c  golioth_packet_capture.c  golioth_payload_utils.c  golioth_remote_shell.c  golioth_ringbuf.c  golioth_rpc.c  golioth_settings.c  golioth_statistics.c  golioth_status.c  (+34 more)
src/include/: golioth.h  golioth_client.h  golioth_coap_client.h  golioth_config.h  golioth_debug.h  golioth_event_group.h  golioth_fw_update.h  golioth_lightdb.h  golioth_ota.h  golioth_remote_shell.h  golioth_ringbuf.h  golioth_rpc.h  golioth_settings.h  golioth_statistics.h  golioth_status.h  golioth_sys.h  golioth_time.h
src/priv_include/: README.md  golioth_coap_client.h  golioth_config.h  golioth_decompressor.h  golioth_fw_block_processor.h  golioth_local_log.h  golioth_mbox.h  golioth_packet_capture.h  golioth_ringbuf.h  golioth_sys.h  golioth_util.h
test/: CMakeLists.txt  README.md  golioth_sys.h  test.sh  test_golioth_rpc.c  test_ringbuf.c
test/fakes/: golioth_coap_client_fake.c
test/fff/: CMakeLists.txt  README.md  fff.h
test/unity/: CMakeLists.txt  README.md  unity_config.h
tests/hil/platform/linux/: CMakeLists.txt  README.md  golioth_user_config.h  main.c
tests/hil/platform/zephyr/: CMakeLists.txt  Kconfig  README.md  prj.conf  testcase.yaml
tests/hil/platform/zephyr/boards/: esp32_devkitc_wrover_esp32_procpu.conf  native_sim_64.conf  nrf52840dk_nrf52840.conf  nrf9160dk_nrf9160_ns.conf  rak5010_nrf52840.overlay  rpi_pico2_rp2350a_m33_w.conf  rpi_pico2_rp2350a_m33_w.overlay
tests/hil/platform/zephyr/socs/: native.conf  native_64.conf  nrf9160_ns.conf
tests/hil/platform/zephyr/src/: main.c
tests/hil/scripts/pytest-hil/: bmpboard.py  board.py  esp32_devkitc_wrover.py  espboard.py  espidfboard.py  jlinkboard.py  linuxboard.py  mimxrt1024evk.py  native_sim.py  ncsboard.py  nordicboard.py  nrf52840dk.py  nrf9160dk.py  plugin.py  pyproject.toml  rak5010.py  zephyrboard.py
tests/hil/scripts/pytest-hil/pytest_hil/: board.py  esp32_devkitc_wrover.py  esp32s3_devkitc.py  espboard.py  espidfboard.py  frdmrw612.py  jlinkboard.py  linuxboard.py  mimxrt1024evk.py  native_sim.py  ncsboard.py  nordicboard.py  nrf52840dk.py  nrf9160dk.py  openocdboard.py  plugin.py  rak5010.py  rpi_pico2.py  zephyrboard.py
tests/hil/scripts/pytest-zephyr-samples/: plugin.py  pyproject.toml
(+668 files in other folders)
