idf_component_register(
    INCLUDE_DIRS
        "../../common"
    SRCS
        "app_main.c"
        "../../common/wifi.c"
        "../../common/nvs.c"
        "../../common/shell.c"
    PRIV_REQUIRES
        "golioth_sdk"
        "console"
        "spi_flash"
        "nvs_flash"
        "json"
        "app_update"
        "unity"
        "driver"
        "esp_hw_support"
        "esp_wifi"
)
list(APPEND EXTRA_C_FLAGS_LIST
    -Werror
)
component_compile_options(${EXTRA_C_FLAGS_LIST})
