[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytest-hil"
version = "0.1.0"
dependencies = [
  'esptool',
  'pylink-square',
  'pynrfjprog',
  'pyserial',
  'PyYAML',
]
classifiers = [
    "Framework :: Pytest",
]

[project.entry-points.pytest11]
hil = "plugin"
