[build-system]
requires = ["hatchling>=1.19"]
build-backend = "hatchling.build"

[project]
name = "pytest-hil"
version = "0.1.0"
dependencies = [
  'esptool',
  'pylink-square',
  'pynrfjprog',
  'pyserial',
  'PyYAML',
  'trio-serial',
]
classifiers = [
    "Framework :: Pytest",
]

[tool.hatch.build.targets.wheel]
include = [ "*.py" ]

[project.entry-points.pytest11]
hil = "plugin"
