[build-system]
requires = ["hatchling>=1.19"]
build-backend = "hatchling.build"

[project]
name = "pytest-zephyr-samples"
version = "0.1.0"
dependencies = [
  'allure-pytest',
]
classifiers = [
    "Framework :: Pytest",
]

[tool.hatch.build.targets.wheel]
include = [ "*.py" ]

[project.entry-points.pytest11]
zephyr-samples = "plugin"
