[build-system]
requires = ["hatchling>=1.19"]
build-backend = "hatchling.build"

[project]
name = "pytest-zephyr-samples"
version = "0.1.0"
dependencies = [
  'allure-pytest',
]
classifiers = [
    "Framework :: Pytest",
]

[project.entry-points.pytest11]
zephyr-samples = "pytest_zephyr_samples.plugin"
